--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container-fluid  d-top-fluid ">
+    <!-- <div class="container-fluid  d-top-fluid ">
         <a class="" href="https//:info@edubureau.com">
 
             info@edubureau.com
@@ -26,10 +26,10 @@
 
 
         </a>
-    </div>
+    </div> -->
     
 
-    <nav class="navbar navbar-light bg-light sticky-top">
+    <!-- <nav class="navbar navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="./assets/EduBureau high resolution-Logo 11.png" alt="" width="30" height="24"
@@ -41,7 +41,46 @@
 
             </a>
         </div>
-    </nav>
+    </nav> -->
+
+    <!-- Nav-bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt="" width="30" height="24"
+            class="d-inline-block align-text-top"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mx-auto mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-danger" type="submit">Register</button>
+            </form>
+          </div>
+        </div>
+      </nav>
 
 
 
@@ -139,21 +178,21 @@
                 <!-- Scratch -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card shadow-lg p-3 mb-5 bg-body rounded text-center">
-                        <img class="card-img-top" src="./images/Tekkie-hp-Scratch_cover_desktop.jpg" alt="">
+                        <img class="card-img-top" src="./images/robot.jpg" alt="">
                         <div class="card-body">
-                            <h5 class="card-text text-warning">Scratch</h5>
+                            <h5 class="card-text text-danger">Scratch</h5>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vel adipisci autem
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-danger button-1">
+                                <a class="" href="">Click Here</a>
                             </button>
                         </div>
                     </div>
                 </div>
-                <!-- Blockling for kids -->
+                <!-- Blockly for kids -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card shadow-lg p-3 mb-5 bg-body rounded text-center">
                         <img class="card-img-top width" src="./images/robot.jpg" alt="">
@@ -164,8 +203,8 @@
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-primary button-1">
+                                <a class="" href="">Click Here</a>
                             </button>
                         </div>
                     </div>
@@ -173,7 +212,7 @@
                 <!-- Robotics for kids -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card shadow-lg p-3 mb-5 bg-body rounded text-center">
-                        <img class="card-img-top" src="./images/Tekkie-hp-Robotics_cover_desktop.jpg" alt="">
+                        <img class="card-img-top" src="./images/robot.jpg" alt="">
                         <div class="card-body">
                             <h5 class="card-text text-danger">Robotics for kids</h5>
                             <p>
@@ -181,8 +220,8 @@
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-danger button-1">
+                                <a class="" href="">Click Here</a>
                             </button>
                         </div>
                     </div>
@@ -192,14 +231,14 @@
                     <div class="card shadow-lg p-3 mb-5 bg-body rounded text-center">
                         <img class="card-img-top width" src="./images/robot.jpg" alt="">
                         <div class="card-body">
-                            <h5 class="card-text text-danger">Python</h5>
+                            <h5 class="card-text text-primary">Python</h5>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vel adipisci autem
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-primary button-1">
+                                <a class="" href="">Click Here</a>
                             </button>
                         </div>
                     </div>
@@ -211,7 +250,7 @@
                 <!-- Web Development -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card shadow-lg p-3 mb-5 bg-body rounded text-center">
-                        <img class="card-img-top width" src="./images/Tekkie-hp-Robotics_cover_desktop.jpg" alt="">
+                        <img class="card-img-top width" src="./images/robot.jpg" alt="">
                         <div class="card-body">
                             <h5 class="card-text text-primary">Web Development</h5>
                             <p>
@@ -219,8 +258,8 @@
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-primary button-1">
+                                <a href="">Click Here</a>
                             </button>
                         </div>
                     </div>
@@ -236,8 +275,8 @@
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-success button-1">
+                                <a href="">Click Here</a>
                             </button>
                         </div>
                     </div>
@@ -245,7 +284,7 @@
                 <!-- Embedded Systems -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card shadow-lg p-3 mb-5 bg-body rounded text-center">
-                        <img class="card-img-top width" src="./images/Tekkie-hp-Robotics_cover_desktop.jpg" alt="">
+                        <img class="card-img-top width" src="./images/robot.jpg" alt="">
                         <div class="card-body">
                             <h5 class="card-text text-primary">Embedded Systems</h5>
                             <p>
@@ -253,8 +292,8 @@
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-primary button-1">
+                                <a href="">Click Here</a>
                             </button>
                         </div>
 
@@ -273,8 +312,8 @@
                                 labore,
                                 laudantium vero ratione iste ducimus, itaque, rem unde ipsam! Qui,
                             </p>
-                            <button class="btn btn-outline-warning button-1">
-                                <a class="text-warning" href="">Click Here</a>
+                            <button class="btn btn-outline-danger button-1">
+                                <a href="">Click Here</a>
                             </button>
                         </div>
                     </div>
