i just made changes to footer and the iframe position

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
 
                 </div>
-
+                <!-- 
                 <div class="container bg-success d-container">
                     <h1>LEARN WITH POPULAR INDUSTRY TOOLS</h1>
                     <p>We teach our courses using the same platforms as professionals. This means your child will learn
@@ -151,7 +151,7 @@
                         <a href=""><img src="./..." alt=""></a>
                         <a href=""><img src="./..." alt=""></a>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
@@ -348,18 +348,16 @@
             </div>
 
         </div>
-
-
         <!-- SOME WORDS FROM OUR STDENTS -->
         <div class="container-fluid text-center mt-5 mb-5">
             <h1>SOME WORDS FROM OUR STUDENTS</h1>
-
+            <!-- start of testimonials -->
             <div class="container p-5">
                 <div class="row">
-                    <div class="col-md-6 col-6">
+                    <div class="col-md-6 col-sm-6">
                         <img class="img-fluid" src="./images/boy with headphone.jpg" alt="" srcset="">
                     </div>
-                    <div class="col-6 col-6 testimonials">
+                    <div class="col-md-6 col-sm-6 testimonials">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut harum maxime expedita
                             inventore, at
@@ -370,8 +368,9 @@
 
                     </div>
                 </div>
+                <!-- second testimonials -->
                 <div class="row mt-5">
-                    <div class="col-md-6 col-6 testimonials">
+                    <div class="col-md-6 col-sm-6 testimonials">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut harum maxime expedita
                             inventore, at
@@ -381,7 +380,7 @@
                         </p>
 
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 col-sm-6">
                         <img class="img-fluid" src="./images/boy with headphone.jpg" alt="" srcset="">
                     </div>
                 </div>
@@ -408,20 +407,25 @@
                 </a>
 
             </div>
-            <footer class="footer-bg mt-5">
-                <div class="container-fluid">
-                    <h2></h2>
-                    <p>Create a responsive video and scale it nicely to the parent element with an 16:9 aspect ratio</p>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item"
-                            src="https://www.facebook.com/edubureaucodeclub/"></iframe>
+            <!-- footer -->
+            <footer class="container-fluid footer-bg mt-5 mb-5">
+                <!-- iframe -->
+                <div class="row">
+                    <div class="">
+                        <h2></h2>
+                        <p>Create a responsive video and scale it nicely to the parent element with an 16:9 aspect ratio
+                        </p>
+                        <div class="col-lg-10 col-md-6 col-sm-6 embed-responsive embed-responsive-16by9 text-right">
+                            <iframe class="embed-responsive-item"
+                                src="https://www.facebook.com/edubureaucodeclub/"></iframe>
+                        </div>
                     </div>
                 </div>
-
+                <!--end of iframe -->
 
                 <div class="container-fluid footer-items">
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-4 col-sm-6">
                             <ul>
                                 <li> <a class="text-warning" href="#">Home</a></li>
                             </ul>
@@ -434,7 +438,8 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-3">
+
+                        <div class="col-lg-3 col-md-4 col-sm-6">
                             <ul>
                                 <li><a class="text-warning" href="#">Courses</a></li>
                             </ul>
@@ -452,7 +457,7 @@
 
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-4 col-sm-6">
                             <ul>
                                 <li> <a class="text-warning" href="#">About</a></li>
                             </ul>
@@ -466,7 +471,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-lg-3 col-md-4 col-sm-6">
                             <ul>
                                 <li class=""><a class="text-warning" href="#">Support Center</a></li>
                             </ul>
