made some changes to the contents

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
 <body>
     <!-- Nav-bar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt="" width="30"
-                    height="24" class="d-inline-block align-text-top"></a>
+                    height="24" class="d-inline-block align-text-top ml-4"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mx-auto mb-lg-0 text-danger">
+                <ul class="navbar-nav me-auto mb-2 mx-auto mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Our Courses
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu text-danger" aria-labelledby="navbarDropdown ">
                             <li><a class="dropdown-item" href="#">Scratch (modle 1-3)</a></li>
                             <li><a class="dropdown-item" href="#">Blockly</a></li>
                             <li><a class="dropdown-item" href="#">Robotics</a></li>
@@ -79,7 +79,7 @@
                         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-telephone"></i>+234 (0) 098 238 3136</a>
                     </li>
                     <li class="nav-item">
-                        <li><a href="info@edubureau.com"><i class="bi bi-envelope"></i>info@edubureau.com</a></li>
+                        <li><a class="anchor" href="info@edubureau.com"><i class="i bi-envelope"></i>info@edubureau.com</a></li>
                     </li>
 
                 </ul>
@@ -139,44 +139,44 @@
                     <p>We teach our courses using the same platforms as professionals. This means your child will learn
                         today and become an expert tomorrow</p>
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-3">
+                        <div class="col-lg-3 col-md-3 col-sm-4">
                             <a href=""><img
                                     src="./images/3-30028_transparent-background-scratch-logo-hd-png-download.png"
                                     width="150px" alt=""></a>
@@ -204,26 +204,24 @@
             <div class="col-lg-3 col-md-6 col-sm-6 d-sm mt-5"  data-aos="zoom-in" data-aos-delay="100">
                 <img src="./assets/hp-wctu-Icon-a-leftside.svg" alt="" class="pb-2">
                 <h5 class="p-3">A learning adventure</h5>
-                <p>Your child has a curious mind. We offer a <br> variety of courses that will keep your <br> child
-                    engaged
-                    while learning new skills.</p>
+                <p>On several occasions, we have met people who claim to have a certain
+                    ability or knowledge, yet are unable to produce results at the standard
+                    level of performance.
+                     We train our students to become professionals and this enables them to function at the required standard of practice. 
+                </p>
 
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 mt-3"  data-aos="zoom-in" data-aos-delay="100">
                 <img src="./assets/hp-wctu-Icon-b-centerside.svg" alt="" class="pb-2">
                 <h5 class="p-3">Learn by doing</h5>
-                <p>When kids make something, they get <br> excited! Most of our courses are divided <br> into
-                    projects
-                    which
-                    kids can share with <br> family and friends.</p>
+                <p>You won’t need to worry about not being tech-savvy when your kids are. Likewise, you won’t need to worry about your kids’ tech status as we provide services for any age category. We offer a friendly and convenient environment for both adults and kids to learn at their own pace and be comfortable. <br> </p>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 mt-4"  data-aos="zoom-in" data-aos-delay="100">
                 <img src="./assets/hp-wctu-Icon-c-rightside.svg" alt="" class="pb-3">
                 <h5 class="p-3">Real-time feedback</h5>
-                <p>Classes are time for questions and <br> collaboration! During live online sessions, <br> your
-                    child
-                    will work
-                    on projects and get <br> help from their experienced instructor.</p>
+                <p>Asking questions and getting your questions answered are great ways to learn. It is important to us that you get value for your time and interest.
+                    Hence, we let you ask questions and ensure we provide the answers, and in turn, check to see that you have understood. We also apply your feedback to our training methods as they help us improve on our services
+                </p>
             </div>
 
         </div>
@@ -500,6 +498,101 @@
         </div>
     </section>
 
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials">
+        <div class="container">
+  
+          <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+            <div class="swiper-wrapper">
+  
+              <div class="swiper-slide">
+                <div class="testimonial-wrap">
+                  <div class="testimonial-item">
+                    <img src="./images/hwd-image-bottom-girl.jpg" class="testimonial-img" alt="">
+                    <h3>Saul Goodman</h3>
+                    <h4>Ceo &amp; Founder</h4>
+                    <p>
+                      <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                      Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
+                      Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                      <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                    </p>
+                  </div>
+                </div>
+              </div><!-- End testimonial item -->
+  
+              <div class="swiper-slide">
+                <div class="testimonial-wrap">
+                  <div class="testimonial-item">
+                    <img src="./images/hwd-image-bottom-girl.jpg" class="testimonial-img" alt="">
+                    <h3>Sara Wilsson</h3>
+                    <h4>Designer</h4>
+                    <p>
+                      <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                      Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
+                      quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                      <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                    </p>
+                  </div>
+                </div>
+              </div><!-- End testimonial item -->
+  
+              <div class="swiper-slide">
+                <div class="testimonial-wrap">
+                  <div class="testimonial-item">
+                    <img src="./images/hwd-image-bottom-girl.jpg" class="testimonial-img" alt="">
+                    <h3>Jena Karlis</h3>
+                    <h4>Store Owner</h4>
+                    <p>
+                      <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                      Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim
+                      tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                      <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                    </p>
+                  </div>
+                </div>
+              </div><!-- End testimonial item -->
+  
+              <div class="swiper-slide">
+                <div class="testimonial-wrap">
+                  <div class="testimonial-item">
+                    <img src="./images/hwd-image-bottom-girl.jpg" class="testimonial-img" alt="">
+                    <h3>Matt Brandon</h3>
+                    <h4>Freelancer</h4>
+                    <p>
+                      <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                      Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit
+                      minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                      <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                    </p>
+                  </div>
+                </div>
+              </div><!-- End testimonial item -->
+  
+              <div class="swiper-slide">
+                <div class="testimonial-wrap">
+                  <div class="testimonial-item">
+                    <img src="./images/hwd-image-bottom-girl.jpg" class="testimonial-img" alt="">
+                    <h3>John Larson</h3>
+                    <h4>Entrepreneur</h4>
+                    <p>
+                      <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                      Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim
+                      culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum
+                      quid.
+                      <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                    </p>
+                  </div>
+                </div>
+              </div><!-- End testimonial item -->
+  
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+  
+        </div>
+      </section><!-- End Testimonials Section -->
+
     <!-- gellery -->
     <div class="container-fluid w-75">
 
@@ -697,7 +790,7 @@
                                 <ul>
                                     <li><a href="#">FAQs</a></li>
                                     <li><a href="#">Help line</a></li>
-                                    <!-- <li><a href="#">Graduate</a></li> -->
+                            
                                 </ul>
                             </div>
                         </div>
@@ -742,6 +835,7 @@
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./vendor/aos/aos.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script>
         if (AOS) {
             AOS.init()
