--- a/offer.html
+++ b/offer.html
@@ -4,9 +4,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>EduBureau</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./main.css">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt="" width="30"
+                    height="24" class="d-inline-block align-text-top ml-4"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mx-auto mb-lg-0 text-danger">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Our Courses
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Scratch (modle 1-3)</a></li>
+                            <li><a class="dropdown-item" href="#">Blockly</a></li>
+                            <li><a class="dropdown-item" href="#">Robotics</a></li>
+                            <li><a class="dropdown-item" href="#">Python</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Web Development</a></li>
+                            <li><a class="dropdown-item" href="#">Mobile App Development</a></li>
+                            <li><a class="dropdown-item" href="#">Data Science</a></li>
+                            <li><a class="dropdown-item" href="#">Graphic Design</a></li>
+                            <li><a class="dropdown-item" href="#">UI/UX</a></li>
+                            <li><a class="dropdown-item" href="#">Embedded Systems</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            How It Works
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">How It Works</a></li>
+                            <li><a class="dropdown-item" href="#">Why Choose EduBureau Coding Club</a></li>
+                            <li><a class="dropdown-item" href="#">Review</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            About
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">About Us</a></li>
+                            <li><a class="dropdown-item" href="#">Our Story</a></li>
+                            <li><a class="dropdown-item" href="#">Our Team</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-telephone"></i>+234 (0) 098 238 3136</a>
+                    </li>
+                    <li class="nav-item">
+                        <li><a class="anchor" href="info@edubureau.com"><i class="i bi-envelope"></i>info@edubureau.com</a></li>
+                    </li>
+
+                </ul>
+                <form class="">
+                    <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+<div class="container-fluid">
+
+  <div class="main">
+    <div class="header">
+      <img src="./images/hwd-image-top-boy.jpg" alt="">
+      <p>
+        create
+      </p>
+      <img src="./images/hwd-image-top-boy.jpg" alt="">
+    </div>
+  </div>
+
+</div>
+
     
 </body>
 </html>
