added some slides

--- a/offer.html
+++ b/offer.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </nav>
-<div class="container-fluid">
+<!-- <div class="container-fluid">
 
   <div class="main">
     <div class="header">
@@ -94,7 +94,10 @@
     </div>
   </div>
 
-</div>
+</div> -->
+
+
+
 
     
 </body>
