i made changes to the comment seesion

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- Nav-bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand ms-5" href="#"><img src="./assets/EduBureau high resolution-Logo 11.png" alt=""
                     width="30" height="24" class="d-inline-block align-text-top ml-4"></a>
@@ -499,7 +499,7 @@
                     </div>
                     <div class="col-md-6 col-sm-6" data-aos="fade-right" data-aos-offset="300"
                         data-aos-easing="ease-in-sine">
-                        <img class="img-fluid shadow-lg p-3 mb-5 rounded " src="./images/boy with headphone.jpg" alt=""
+                        <img class="img-fluid shadow-lg p-3 mb-5 rounded " src="./images/scratch-images.jpg" alt=""
                             srcset="">
                     </div>
                 </div>
